change font-weight to fix weight on safari

--- a/src/cf-core/src/cf-base.less
+++ b/src/cf-core/src/cf-base.less
@@ -120,7 +120,7 @@ textarea {
 
     margin-bottom: unit( 15px / @font-size, em );
     font-size: unit( @font-size / @base-font-size-px, em );
-    font-weight: bold;
+    font-weight: 600;
     letter-spacing: 1px;
     line-height: 1.25;
     text-shadow: 0px 0px @text-shadow;
@@ -132,7 +132,7 @@ textarea {
 
     margin-bottom: unit( 15px / @font-size, em );
     font-size: unit( @font-size / @base-font-size-px, em );
-    font-weight: bold;
+    font-weight: 600;
     letter-spacing: 1px;
     line-height: 1.25;
     text-shadow: 0px 0px @text-shadow;
